--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Beautiful mimimal blog card">
+    <meta name="description" content="Beautiful and mimimal blog card">
     <link rel="stylesheet" href="styles.css">
 
     <link
