--- a/index.html
+++ b/index.html
@@ -1,62 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Beautiful and mimimal blog card">
-    <link rel="stylesheet" href="styles.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Beautiful and mimimal blog card">
+  <link rel="stylesheet" href="styles.css">
 
-    <link
-      rel="icon"
-      href="resources/favicon.ico"
-      type="image/x-icon"
-      sizes="96x96"
-    />
+  <link
+    rel="icon"
+    href="resources/favicon.ico"
+    type="image/x-icon"
+    sizes="96x96"
+  />
 
-    <title>devChallenges.io | Minimal Blog Card</title>
+  <title>Minimal Blog Card</title>
+</head>
+<body>
 
-    
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        height: 100vh;
-      }
-
-      .author-info {
-        font-size: 14px;
-        text-align: center;
-        margin-top: 16px;
-        color: rgb(55, 65, 81);
-      }
-
-      .author-info a {
-        text-decoration: none;
-      }
-
-      .author-info a:hover {
-        text-decoration: underline;
-      }
-    </style>
-  </head>
-  <body>
-    <!-- Design
-
-  Embracing Minimalism
-
-  From minimalist sculptures to minimalist paintings, this blog will inspire you to appreciate the beauty that lies in simplicity.
-
-  Annie Spratt -->
-
-    <div class="author-info">
-      Coded by <a href="#">Chibuikem Adrian</a> | Challenge by
-      <a href="https://www.devchallenges.io?ref=challenge" target="_blank"
-        >devChallenges.io</a
-      >.
+  <div class="container"> 
+    <img src="resources/Cactus.jpg" alt="cactus">
+    <div class="text-section">
+      <span class="tag">Design</span>
+      <h1>Embracing Minimalism</h1>
+      <div class="blog-text">
+        From minimalist sculptures to minimalist <br>
+        paintings, this blog will inspire you to <br> 
+        appreciate the beauty that lies in simplicity.
+      </div>
+      <div class="blog-footer">Annie Spratt</div>
     </div>
-  </body>
+  </div>
+
+
+  <div class="author-info">
+    Coded by <a href="#">Chibuikem Adrian</a> | Challenge by
+    <a href="https://www.devchallenges.io?ref=challenge" target="_blank"
+      >devChallenges.io</a
+    >.
+  </div>
+
+</body>
 </html>
