--- a/index.html
+++ b/index.html
@@ -5,38 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Beautiful and mimimal blog card">
   <link rel="stylesheet" href="styles.css">
-
-  <link
-    rel="icon"
-    href="resources/favicon.ico"
-    type="image/x-icon"
-    sizes="96x96"
-  />
-
+  <link rel="icon" href="resources/favicon.ico" type="image/x-icon" sizes="96x96"/>
   <title>Minimal Blog Card</title>
 </head>
 <body>
 
-  <div class="container"> 
-    <img src="resources/Cactus.jpg" alt="cactus">
-    <div class="text-section">
-      <span class="tag">Design</span>
-      <h1>Embracing Minimalism</h1>
-      <div class="blog-text">
-        From minimalist sculptures to minimalist <br>
-        paintings, this blog will inspire you to <br> 
-        appreciate the beauty that lies in simplicity.
+  <div class="page-wrapper">
+
+    <div class="container">
+      <div class="section"> 
+        <img src="resources/Cactus.jpg" alt="cactus">
+        <div class="text-section">
+          <span class="tag">Design</span>
+          <h1>Embracing Minimalism</h1>
+          <div class="blog-text">
+            From minimalist sculptures to minimalist <br>
+            paintings, this blog will inspire you to <br> 
+            appreciate the beauty that lies in simplicity.
+          </div>
+          <div class="blog-footer">Annie Spratt</div>
+        </div>
       </div>
-      <div class="blog-footer">Annie Spratt</div>
     </div>
-  </div>
 
+      <!--Page footer-->
+    <div class="author-info">
+      Coded by <a href="#">Chibuikem Adrian</a> | Challenge by
+      <a href="https://www.devchallenges.io?ref=challenge" target="_blank"
+        >devChallenges.io</a
+      >.
+    </div>
 
-  <div class="author-info">
-    Coded by <a href="#">Chibuikem Adrian</a> | Challenge by
-    <a href="https://www.devchallenges.io?ref=challenge" target="_blank"
-      >devChallenges.io</a
-    >.
   </div>
 
 </body>
